--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
