--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc -p .",
-    "start": "NODE_PATH=./build node build/index.js"
+    "build": "npm install && tsc -p .",
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "Kei-K23",
